--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
     "jotai": "^2.4.2",
+    "path": "^0.12.7",
     "prettier": "^3.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
