--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.46.2",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
+    "react-textarea-autosize": "^8.5.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.8",
     "styled-reset": "^4.5.1"
