--- a/src/package.json
+++ b/src/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.46.2",
+    "react-hot-toast": "^2.4.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
