--- a/src/package.json
+++ b/src/package.json
@@ -14,8 +14,6 @@
     "@tanstack/react-query-devtools": "^4.35.3",
     "jotai": "^2.4.2",
     "path": "^0.12.7",
-    "prettier": "^3.0.3",
-    "prop-types": "^15.8.1",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
@@ -42,6 +40,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "jsdoc": "^4.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "prettier": "^3.0.3",
+    "prop-types": "^15.8.1"
   }
 }
