--- a/src/package.json
+++ b/src/package.json
@@ -40,8 +40,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "jsdoc": "^4.0.2",
-    "vite": "^4.4.5",
+    "msw": "^1.3.2",
     "prettier": "^3.0.3",
-    "prop-types": "^15.8.1"
+    "prop-types": "^15.8.1",
+    "vite": "^4.4.5"
   }
 }
