--- a/src/package.json
+++ b/src/package.json
@@ -44,5 +44,8 @@
     "prettier": "^3.0.3",
     "prop-types": "^15.8.1",
     "vite": "^4.4.5"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
