--- a/src/package.json
+++ b/src/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
+    "axios": "^1.5.1",
     "jotai": "^2.4.2",
     "path": "^0.12.7",
     "quill-image-resize-module-react": "^3.0.0",
