--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
     "axios": "^1.5.1",
+    "dompurify": "^3.0.6",
     "jotai": "^2.4.3",
     "path": "^0.12.7",
     "quill-image-resize-module-react": "^3.0.0",
