--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.5.1",
     "dompurify": "^3.0.6",
     "jotai": "^2.4.3",
+    "lottie-react": "^2.4.0",
     "path": "^0.12.7",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
