--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
   labels:
     app.kubernetes.io/managed-by: kargocd
-  name: krampoline
+  name: fundering
   namespace: default
 spec:
   rules:
